Blender crashes when i click on it from task bar and when i open from minimized or go back to the application #60811

Closed
opened 2019-01-24 05:51:29 +01:00 by Nicholas · 30 comments

System Information
Operating system: Microsoft Windows 10 (build 17134), 64-bit
Graphics card: Intel(R) UHD Graphics 620
Processor: Intel(R) Core(TM) i5-8250U CPU @ 1.60GHz

Blender Version
Broken:
2.79b release

Short description of error

(ive been using blender for a couple years and i stopped for like 4 months and when i came back to it, this happened, i tried reinstalling and removing files but nothing has worked..)

Blender crashes when i click on it from task bar and when i open from minimized or go back to the application

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
2019-01-23 18-45-54.flv

**System Information** Operating system: Microsoft Windows 10 (build 17134), 64-bit Graphics card: Intel(R) UHD Graphics 620 Processor: Intel(R) Core(TM) i5-8250U CPU @ 1.60GHz **Blender Version** Broken: 2.79b release **Short description of error** (ive been using blender for a couple years and i stopped for like 4 months and when i came back to it, this happened, i tried reinstalling and removing files but nothing has worked..) Blender crashes when i click on it from task bar and when i open from minimized or go back to the application **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). [2019-01-23 18-45-54.flv](https://archive.blender.org/developer/F6385862/2019-01-23_18-45-54.flv)
Author

Added subscriber: @DedosThreat

Added subscriber: @DedosThreat

#63279 was marked as duplicate of this issue

#63279 was marked as duplicate of this issue

This issue was referenced by 6fdc688cd0

This issue was referenced by 6fdc688cd06c4b97d6e3e6767f0263b534f4158c
Author

I need this really fast if anyone knows a solution..

I need this really fast if anyone knows a solution..

Added subscriber: @brecht

Added subscriber: @brecht

See the advice here about installing latest drivers:
https://docs.blender.org/manual/en/dev/troubleshooting/gpu.html

Other than that it's unclear what the cause could be.

See the advice here about installing latest drivers: https://docs.blender.org/manual/en/dev/troubleshooting/gpu.html Other than that it's unclear what the cause could be.
Author

In #60811#606089, @brecht wrote:
See the advice here about installing latest drivers:
https://docs.blender.org/manual/en/dev/troubleshooting/gpu.html

Other than that it's unclear what the cause could be.

I tried that :(

> In #60811#606089, @brecht wrote: > See the advice here about installing latest drivers: > https://docs.blender.org/manual/en/dev/troubleshooting/gpu.html > > Other than that it's unclear what the cause could be. I tried that :(
Author

Im going to try resetting my pc

Im going to try resetting my pc
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

This sounds like a graphics driver bug. I used to have similar issues about a decade ago on my old desktop that had integrated graphics (and it wasn't even one by Intel back then). The only solutions I found for that were:

  1. Don't minimise Blender windows ever and/or don't keep Blender open if you're going to be away from the screen for a while (e.g. if the screensaver might pop up, or the machine might go into standby),
  2. Save work before switching away from Blender,
  3. Disable cursor shadows (this helped with some weird cursor flickering issues when moving over the UI, and also improved interactivity)

In your case, I'd suggest to try adjusting each one of the other options in the Advanced System Performance section one by one, taking note of whether disabling certain things makes Blender more stable
win10-advanced_system_perf_dialog.png

In particular I'd probably start by disabling Peek and any fancy visual effects for windows (e.g. animation, shadows, transparency, etc.)

This sounds like a graphics driver bug. I used to have similar issues about a decade ago on my old desktop that had integrated graphics (and it wasn't even one by Intel back then). The only solutions I found for that were: 1) Don't minimise Blender windows ever and/or don't keep Blender open if you're going to be away from the screen for a while (e.g. if the screensaver might pop up, or the machine might go into standby), 2) Save work before switching away from Blender, 3) Disable cursor shadows (this helped with some weird cursor flickering issues when moving over the UI, and also improved interactivity) In your case, I'd suggest to try adjusting each one of the other options in the Advanced System Performance section one by one, taking note of whether disabling certain things makes Blender more stable ![win10-advanced_system_perf_dialog.png](https://archive.blender.org/developer/F6400266/win10-advanced_system_perf_dialog.png) In particular I'd probably start by disabling Peek and any fancy visual effects for windows (e.g. animation, shadows, transparency, etc.)
Author

In #60811#607030, @JoshuaLeung wrote:
This sounds like a graphics driver bug. I used to have similar issues about a decade ago on my old desktop that had integrated graphics (and it wasn't even one by Intel back then). The only solutions I found for that were:

  1. Don't minimise Blender windows ever and/or don't keep Blender open if you're going to be away from the screen for a while (e.g. if the screensaver might pop up, or the machine might go into standby),
  2. Save work before switching away from Blender,
  3. Disable cursor shadows (this helped with some weird cursor flickering issues when moving over the UI, and also improved interactivity)

In your case, I'd suggest to try adjusting each one of the other options in the Advanced System Performance section one by one, taking note of whether disabling certain things makes Blender more stable
win10-advanced_system_perf_dialog.png

In particular I'd probably start by disabling Peek and any fancy visual effects for windows (e.g. animation, shadows, transparency, etc.)

I just reset my PC and it's working perfectly now :')

> In #60811#607030, @JoshuaLeung wrote: > This sounds like a graphics driver bug. I used to have similar issues about a decade ago on my old desktop that had integrated graphics (and it wasn't even one by Intel back then). The only solutions I found for that were: > 1) Don't minimise Blender windows ever and/or don't keep Blender open if you're going to be away from the screen for a while (e.g. if the screensaver might pop up, or the machine might go into standby), > 2) Save work before switching away from Blender, > 3) Disable cursor shadows (this helped with some weird cursor flickering issues when moving over the UI, and also improved interactivity) > > > In your case, I'd suggest to try adjusting each one of the other options in the Advanced System Performance section one by one, taking note of whether disabling certain things makes Blender more stable > ![win10-advanced_system_perf_dialog.png](https://archive.blender.org/developer/F6400266/win10-advanced_system_perf_dialog.png) > > In particular I'd probably start by disabling Peek and any fancy visual effects for windows (e.g. animation, shadows, transparency, etc.) I just reset my PC and it's working perfectly now :')

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-01-25 19:28:07 +01:00

Let's consider it resolved then, not much we can do here to investigate things further.

Let's consider it resolved then, not much we can do here to investigate things further.
Author

So after i reset my Computer i found out what the problem was, it was my XP-pen drivers, its been causing this so, if anyone has a fix that would be great :) otherwise i just cant use my pen tablet.

So after i reset my Computer i found out what the problem was, it was my XP-pen drivers, its been causing this so, if anyone has a fix that would be great :) otherwise i just cant use my pen tablet.
Brecht Van Lommel was unassigned by Nicholas 2019-02-06 17:29:12 +01:00
Nicholas self-assigned this 2019-02-06 17:29:12 +01:00

Does it also happen with the latest daily builds (2.79 or 2.80)?
https://builder.blender.org/download/

We recently made some changes to tablet handling which might help here.

Does it also happen with the latest daily builds (2.79 or 2.80)? https://builder.blender.org/download/ We recently made some changes to tablet handling which might help here.
Nicholas was unassigned by Brecht Van Lommel 2019-02-06 17:34:30 +01:00
Author

In #60811#614668, @brecht wrote:
Does it also happen with the latest daily builds (2.79 or 2.80)?
https://builder.blender.org/download/

We recently made some changes to tablet handling which might help here.

The Beta?

> In #60811#614668, @brecht wrote: > Does it also happen with the latest daily builds (2.79 or 2.80)? > https://builder.blender.org/download/ > > We recently made some changes to tablet handling which might help here. The Beta?

Both the 2.79 stable daily build and the 2.80 beta have new fixes compared to 2.79b.

Both the 2.79 stable daily build and the 2.80 beta have new fixes compared to 2.79b.
Author

In #60811#614740, @brecht wrote:
Both the 2.79 stable daily build and the 2.80 beta have new fixes compared to 2.79b.

Works perfectly! thanks! ill tell you if it acts up again ?

> In #60811#614740, @brecht wrote: > Both the 2.79 stable daily build and the 2.80 beta have new fixes compared to 2.79b. Works perfectly! thanks! ill tell you if it acts up again ?
Author

In #60811#614740, @brecht wrote:
Both the 2.79 stable daily build and the 2.80 beta have new fixes compared to 2.79b.

I just was using blender today and its doing the same thing. it didnt fix the pen tablet software ;-;

> In #60811#614740, @brecht wrote: > Both the 2.79 stable daily build and the 2.80 beta have new fixes compared to 2.79b. I just was using blender today and its doing the same thing. it didnt fix the pen tablet software ;-;

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Did you try 2.79 or 2.80?

Please try tomorrow's 2.79 build, it will include a possible fix for this issue.

Did you try 2.79 or 2.80? Please try tomorrow's 2.79 build, it will include a possible fix for this issue.
Author

Still not working :(

Still not working :(

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Author

Wow i forgot about this, thanks.

Wow i forgot about this, thanks.

For blender_debug_log.cmd, those are included in the latest daily 2.80 builds. You just run them from the same folder as blender.exe.

For blender_debug_log.cmd, those are included in the latest daily 2.80 builds. You just run them from the same folder as blender.exe.
Author

i restarted my pc and the beta is working now

i restarted my pc and the beta is working now
Author

but i really wanted the other version to work because im used to the interface
:(

but i really wanted the other version to work because im used to the interface :(

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Brecht Van Lommel self-assigned this 2019-04-04 17:53:01 +02:00

It's unlikely we will backport the new pen system to 2.79, all focus is on 2.80 now.

It's unlikely we will backport the new pen system to 2.79, all focus is on 2.80 now.

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60811
No description provided.